--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -26,25 +26,18 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Install Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ninja-build
-
       - uses: actions/checkout@v4
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B build -G Ninja \
-          -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
-          -DCMAKE_CXX_COMPILER=${{ matrix.compiler_version }} \
-          -DCXX_STD=${{ matrix.cxx_std }}
+        run: |
+          mkdir build
+          cd build
+          cmake .. -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DCMAKE_CXX_COMPILER=${{ matrix.compiler_version }} -DCXX_STD=${{ matrix.cxx_std }}
 
       - name: Build
-        working-directory: build
-        run: cmake --build .
+        run: cd build ; make -j4
 
       - name: Test
-        working-directory: build
-        run: ctest -C ${{ env.BUILD_TYPE }} -j $(nproc) --output-on-failure
+        run: cd build ; make check
