Factor out a lot of the lexer.cpp tests into a separate file.
See #202.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -101,6 +101,7 @@ add_test_executable(parser_or_permutations_1)
 add_test_executable(parser_or_permutations_2)
 if (CXX_STD GREATER_EQUAL 20)
     add_test_executable(lexer)
+    add_test_executable(lexer_adobe_files)
 endif()
 
 if (MSVC)
