--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cxx_std: [20, 23]
+        cxx_std: [17, 20, 23]
         os: [windows-2022]
 
     runs-on: ${{ matrix.os }}
